--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <header>
+      <!-- Navbar -->
       <div class="navbar">
         <div class="logo">
           <img src="assets/logo-colored.png" alt="" />
@@ -22,8 +23,9 @@
         <div class="input-box">
           <input type="text" placeholder="Search" />
           <div class="dropdown">
-            <button class="dropbtn">All Category 
-                <img src="assets/dropdown-img.png" alt="">
+            <button class="dropbtn">
+              All Category
+              <img src="assets/dropdown-img.png" alt="" />
             </button>
             <div class="dropdown-content">
               <a href="#">Option 1</a>
@@ -43,10 +45,189 @@
           </ul>
         </div>
       </div>
+
+      <section>
+        <!-- all categories mentioned section -->
+        <div class="category-section">
+          <ul>
+            <li><img src="assets/menu-icon.png" alt="" />All Category</li>
+            <li>Hot offers</li>
+            <li>Gift boxes</li>
+            <li>Projects</li>
+            <li>Main item</li>
+            <li>Help <img src="assets/dropdown-img.png" alt="" /></li>
+          </ul>
+          <div class="btns">
+            <button class="currency">
+              English, USD <img src="assets/dropdown-img.png" alt="" />
+            </button>
+            <button class="shipping">
+              Ship to <img src="assets/belgium-flag.png" alt="" />
+              <img src="assets/dropdown-img.png" alt="" />
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- permanent bg color -->
+<div class="bg-color"> 
+    <!-- flags section -->
+      <div class="flags-section">
+        <h2>Suppliers by region</h2>
+  <div class="flags">
+        <div class="country-container">
+          <img src="assets/uae-flag.png" alt="UAE Flag">
+          <div class="country-text">
+              <span>Arabic Emirates</span>
+              <span class="shop-name">shopname.ae</span>
+          </div>
+      </div>
+        <div class="country-container">
+          <img src="assets/austrailia-flag.png" alt="Australia Flag">
+          <div class="country-text">
+              <span>Australia</span>
+              <span class="shop-name">shopname.au</span>
+          </div>
+      </div>
+        <div class="country-container">
+          <img src="assets/usa-flag.png" alt="USA Flag">
+          <div class="country-text">
+              <span>USA</span>
+              <span class="shop-name">shopname.us</span>
+          </div>
+      </div>
+        <div class="country-container">
+          <img src="assets/russia-flag.png" alt="Russia Flag">
+          <div class="country-text">
+              <span>Russia</span>
+              <span class="shop-name">shopname.ru</span>
+          </div>
+      </div>
+        <div class="country-container">
+          <img src="assets/italy-flag.png" alt="Italy Flag">
+          <div class="country-text">
+              <span>Italy</span>
+              <span class="shop-name">shopname.it</span>
+          </div>
+      </div>
+        <div class="country-container">
+          <img src="assets/denmark-flag.png" alt="Denmark Flag">
+          <div class="country-text">
+              <span>Denmark</span>
+              <span class="shop-name">shopname.dm</span>
+          </div>
+      </div>
+        <div class="country-container">
+          <img src="assets/france-flag.png" alt="France Flag">
+          <div class="country-text">
+              <span>France</span>
+              <span class="shop-name">shopname.fu</span>
+          </div>
+      </div>
+        <div class="country-container">
+          <img src="assets/uae-flag.png" alt="UAE Flag">
+          <div class="country-text">
+              <span>Arabic Emirates</span>
+              <span class="shop-name">shopname.ae</span>
+          </div>
+      </div>
+        <div class="country-container">
+          <img src="assets/china-flag.png" alt="China Flag">
+          <div class="country-text">
+              <span>China</span>
+              <span class="shop-name">shopname.ch</span>
+          </div>
+      </div>
+        <div class="country-container">
+          <img src="assets/uk-flag.png" alt="UK Flag">
+          <div class="country-text">
+              <span>UK</span>
+              <span class="shop-name">shopname.uk</span>
+          </div>
+      </div>
+    </div>
+      </div>
+
+      <!-- Subscribe newsletter Section -->
+       <div class="subscribe-section">
+        <h3>Subscribe on our newsletter</h3>
+        <p>Get daily news on upcoming offers from many suppliers all over the world</p>
+        <div class="subscribe-box">
+          <img class="input-icon" src="assets/email-icon.png" alt="">
+          <input type="text" placeholder="Email">
+          <button>Subscribe</button>
+        </div>
+       </div>
+</div>
     </header>
 
-    <main></main>
+    <!-- <main></main> -->
 
-    <footer></footer>
+    <footer>
+      <div class="footer-box">
+
+        <div class="social-media-icons">
+          <img width="" src="assets/logo-colored.png" alt="">
+          <p>Best information about the company gies here but now lorem ipsum is</p>
+          <div class="icons">
+            <li><img src="assets/insta-icon.png" alt=""></li>
+            <li><img src="assets/yt-icon.png" alt=""></li>
+            <li><img src="assets/facebook-icon.png" alt=""></li>
+            <li><img src="assets/twitter-icon.png" alt=""></li>
+            <li><img src="assets/linkedin-icon.png" alt=""></li>
+          </div>
+        </div>
+
+        <div class="headings">
+          <div class="content">
+              <div class="about">
+                  <h4>About</h4>
+                  <ul>
+                      <li>About us</li>
+                      <li>Find store</li>
+                      <li>Categories</li>
+                      <li>Blogs</li>
+                  </ul>
+              </div>
+              <div class="partnership">
+                  <h4>Partnership</h4>
+                  <ul>
+                      <li>About us</li>
+                      <li>Find store</li>
+                      <li>Categories</li>
+                      <li>Blogs</li>
+                  </ul>
+              </div>
+              <div class="information">
+                  <h4>Information</h4>
+                  <ul>
+                      <li>Money refund</li>
+                      <li>Shipping</li>
+                      <li>Contact us</li>
+                      <li>Blogs</li>
+                  </ul>
+              </div>
+              <div class="for-users">
+                  <h4>For users</h4>
+                  <ul>
+                      <li>Login</li>
+                      <li>Register</li>
+                      <li>Settings</li>
+                      <li>My orders</li>
+                  </ul>
+              </div>
+              <div class="get-app">
+                  <h4>Get app</h4>
+                  <img src="assets/appstore-button.png" alt="">
+                  <img src="assets/android-button.png" alt="">
+              </div>
+          </div>
+        </div>
+        </div>
+        <div class="copyright-footer">
+            <p>&copy 2023 Ecommerce.</p>
+            <div><img src="assets/usa-flag.png" alt="">English <img src="assets/dropdown-img.png" alt=""></div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
