--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li><img src="assets/profile-icon.png" alt="" />Profile</li>
             <li><img src="assets/messages-icon.png" alt="" />Message</li>
             <li><img src="assets/order-icon.png" alt="" />Orders</li>
-            <li><img src="assets/mycart-icon.png" alt="" />My cart</li>
+            <li><img src="assets/my-cart-icon.png" alt="" />My cart</li>
           </ul>
         </div>
       </div>
