Banner and deals offer page completed

--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
           </ul>
         </div>
       </div>
+      <div class="horizontal-line"></div>
 
       <section>
         <!-- all categories mentioned section -->
         <div class="category-section">
           <ul>
-            <li><img src="assets/menu-icon.png" alt="" />All Category</li>
+            <img src="assets/menu-icon.png" alt="" />
+            <li>All Category</li>
             <li>Hot offers</li>
             <li>Gift boxes</li>
             <li>Projects</li>
@@ -68,6 +70,111 @@
           </div>
         </div>
       </section>
+      <div class="horizontal-line"></div>
+
+<!-- This is the Main banner page -->
+<div class="bg-grey">
+ <main>
+  <div class="main">
+    <div class="categories-names">
+      <button>Automobiles</button>
+      <button>Clothes and wear</button>
+      <button>Home interiors</button>
+      <button>Computer and tech</button>
+      <button>Tools, equipment</button>
+      <button>Sports and outdoor</button>
+      <button>Animal and pets</button>
+      <button>Machinery tools</button>
+      <button>More category</button>
+    </div>
+    <div class="banner"><img src="assets/banner.png" alt=""></div>
+
+    <div class="cards">
+    <div class="login-container">
+      <div class="login-title">Hi user<br>let's get started</div>
+      <div class="login-buttons">
+        <button class="join-button">Join now</button>
+        <button class="login-link">Login</button>
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="info-card orange-card">
+        Get US $10 off with a new supplier
+      </div>
+      <div class="info-card blue-card">
+        Send quotes with supplier preferences
+      </div>
+    </div>
+  </div>
+
+  </div>
+ </main>
+
+
+<!-- Deals and offer pages -->
+<div class="deals-container">
+  <div class="deals-row">
+      <!-- First Box: Timer and Title -->
+      <div class="product-box timer-box">
+          <div class="deals-header">
+              <h2 class="deals-title">Deals and offers</h2>
+              <p class="deals-subtitle">Hygiene equipments</p>
+          </div>
+          <div class="timer-wrapper">
+              <div class="timer-item">
+                  <span class="number">04</span>
+                  <span class="label">Days</span>
+              </div>
+              <div class="timer-item">
+                  <span class="number">13</span>
+                  <span class="label">Hour</span>
+              </div>
+              <div class="timer-item">
+                  <span class="number">34</span>
+                  <span class="label">Min</span>
+              </div>
+              <div class="timer-item">
+                  <span class="number">56</span>
+                  <span class="label">Sec</span>
+              </div>
+          </div>
+      </div>
+
+      <!-- Product Boxes -->
+      <div class="product-box">
+          <img src="assets/watch.png" alt="Smart watches" class="product-img">
+          <h3 class="product-name">Smart watches</h3>
+          <span class="discount">-25%</span>
+      </div>
+
+      <div class="product-box">
+          <img src="assets/laptop.png" alt="Laptops" class="product-img">
+          <h3 class="product-name">Laptops</h3>
+          <span class="discount">-15%</span>
+      </div>
+
+      <div class="product-box">
+          <img src="assets/phone.png" alt="GoPro cameras" class="product-img">
+          <h3 class="product-name">GoPro cameras</h3>
+          <span class="discount">-40%</span>
+      </div>
+
+      <div class="product-box">
+          <img src="assets/headphones.png" alt="Headphones" class="product-img">
+          <h3 class="product-name">Headphones</h3>
+          <span class="discount">-25%</span>
+      </div>
+
+      <div class="product-box">
+          <img src="assets/camera.png" alt="Canon cameras" class="product-img">
+          <h3 class="product-name">Canon cameras</h3>
+          <span class="discount">-25%</span>
+      </div>
+  </div>
+</div>
+</div>
+
       <!-- permanent bg color -->
 <div class="bg-color"> 
     <!-- flags section -->
