Week 2 || Home page completed

--- a/index.html
+++ b/index.html
@@ -173,6 +173,301 @@
       </div>
   </div>
 </div>
+
+<!-- Home and Decor Products -->
+<div class="category-grid">
+  <!-- Featured Box -->
+  <div class="category-box featured">
+    <div class="content-wrapper">
+        <h2>Home and <br>outdoor</h2>
+        <button class="source-btn">Source now</button>
+    </div>
+    <img src="assets/home and deccor/home-and-decor-background.png" alt="Home decor" class="bg-image-home-decor">
+</div>
+
+  <!-- Product Grid -->
+  <div class="product-items">
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Soft chairs</h3>
+              <p>From <br>USD 19</p>
+          </div>
+          <img src="assets/home and deccor/sofa.png" alt="Soft chairs">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Lamp</h3>
+              <p>From <br>USD 19</p>
+          </div>
+          <img src="assets/home and deccor/lamp.png" alt="Lamp">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Kitchen dishes</h3>
+              <p>From <br>USD 19</p>
+          </div>
+          <img src="assets/home and deccor/dishes.png" alt="Kitchen dishes">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Pot</h3>
+              <p>From <br>USD 19</p>
+          </div>
+          <img src="assets/home and deccor/pot.png" alt="Pot">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Kitchen mixer</h3>
+              <p>From <br>USD 100</p>
+          </div>
+          <img src="assets/home and deccor/mixer.png" alt="Kitchen mixer">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Blenders</h3>
+              <p>From <br>USD 39</p>
+          </div>
+          <img src="assets/home and deccor/coffee-machine.png" alt="Blenders">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Home appliance</h3>
+              <p>From <br>USD 19</p>
+          </div>
+          <img src="assets/home and deccor/home-appliance.png" alt="Home appliance">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Coffee maker</h3>
+              <p>From <br>USD 10</p>
+          </div>
+          <img src="assets/home and deccor/dishes.png" alt="Coffee maker">
+      </div>
+  </div>
+</div>
+
+<!-- Consumer electronics and gadgets -->
+<div class="category-grid">
+  <!-- Featured Box -->
+  <div class="category-box featured">
+    <div class="content-wrapper">
+        <h2>Consumer <br>electronics and <br>gadgets</h2>
+        <button class="source-btn">Source now</button>
+    </div>
+    <img src="assets/consumer and electronics/consumer-electronics-background.png" alt="consumer-electronics" class="bg-image-home-decor">
+</div>
+
+  <!-- Product Grid -->
+  <div class="product-items">
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Smart Watches</h3>
+              <p>From <br>USD 19</p>
+          </div>
+          <img src="assets/watch.png" alt="Smart Watches">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Camera</h3>
+              <p>From <br>USD 19</p>
+          </div>
+          <img src="assets/camera.png" alt="Camera">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Headphones</h3>
+              <p>From <br>USD 19</p>
+          </div>
+          <img src="assets/headphones.png" alt="Headphones">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Electric-Kettle</h3>
+              <p>From <br>USD 19</p>
+          </div>
+          <img src="assets/consumer and electronics/electric-kettle.png" alt="electric-kettle">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>SmartPhones</h3>
+              <p>From <br>USD 100</p>
+          </div>
+          <img src="assets/consumer and electronics/smartphones.png" alt="SmartPhones">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Gaming set</h3>
+              <p>From <br>USD 39</p>
+          </div>
+          <img src="assets/consumer and electronics/gamingset.png" alt="Gaming set">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Laptop & PC</h3>
+              <p>From <br>USD 19</p>
+          </div>
+          <img src="assets/laptop.png" alt="Laptop & PC">
+      </div>
+
+      <div class="product-item">
+          <div class="product-info">
+              <h3>Iphone X</h3>
+              <p>From <br>USD 10</p>
+          </div>
+          <img src="assets/consumer and electronics/iphonex.png" alt="Iphone X">
+      </div>
+  </div>
+</div>
+
+<!-- Inquiry Section -->
+<div class="inquiry-section">
+  <div class="inquiry-background">
+    <img src="assets/inquiry-background.png" alt="Inquiry Background" class="background-image">
+    <div class="inquiry-content">
+      <div class="inquiry-left">
+        <h3>An easy way to send <br>requests to all suppliers</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, sed eum?</p>
+      </div>
+      <div class="inquiry-right">
+        <form class="inquiry-form">
+          <h4>Send quote to suppliers</h4>
+          <div class="form-group">
+            <label for="item">What item you need?</label>
+            <input type="text" id="item" placeholder="Type more details">
+          </div>
+          <div class="input-group">
+            <textarea class="form-control" aria-label="With textarea" placeholder="Type more details"></textarea>
+          </div>
+          <div class="form-group my-3">
+            <div class="quantity-input">
+              <input type="number" id="quantity" placeholder="Quantity">
+              <select>
+                <option value="pcs">Pcs</option>
+                <option value="kg">Kg</option>
+                <option value="liters">Liters</option>
+              </select>
+            </div>
+          </div>
+          <button type="submit" class="inquiry-btn">Send Inquiry</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Recommended Items Section -->
+<div class="recommended-section">
+  <h3 class="section-title">Recommended items</h3>
+  <div class="recommended-grid">
+    <div class="item">
+      <img src="assets/Recommended Items/tshirt.png" alt="T-shirt">
+      <p class="price">$10.30</p>
+      <p class="description">T-shirts with multiple colors, for men</p>
+    </div>
+    <div class="item">
+      <img src="assets/Recommended Items/brown-jacket.png" alt="Jacket">
+      <p class="price">$10.30</p>
+      <p class="description">Brown Jacket for woman</p>
+    </div>
+    <div class="item">
+      <img src="assets/Recommended Items/coat.png" alt="Coat">
+      <p class="price">$12.50</p>
+      <p class="description">Brown winter coat medium size</p>
+    </div>
+    <div class="item">
+      <img src="assets/Recommended Items/wallet.png" alt="Wallet">
+      <p class="price">$34.00</p>
+      <p class="description">Leather wallet</p>
+    </div>
+    <div class="item">
+      <img src="assets/Recommended Items/bag.png" alt="Backpack">
+      <p class="price">$99.00</p>
+      <p class="description">Jeans bag for travel</p>
+    </div>
+    <div class="item">
+      <img src="assets/Recommended Items/short.png" alt="Shorts">
+      <p class="price">$9.99</p>
+      <p class="description">Shorts</p>
+    </div>
+    <div class="item">
+      <img src="assets/headphones.png" alt="Headset">
+      <p class="price">$8.99</p>
+      <p class="description">Headset for gaming with mic</p>
+    </div>
+    <div class="item">
+      <img src="assets/watch.png" alt="Smartwatch">
+      <p class="price">$10.30</p>
+      <p class="description">Smartwatch silver color modern</p>
+    </div>
+    <div class="item">
+      <img src="assets/Recommended Items/bag.png" alt="Bag">
+      <p class="price">$10.30</p>
+      <p class="description">Jeans bag for travel for men leather material</p>
+    </div>
+    <div class="item">
+      <img src="assets/consumer and electronics/electric-kettle.png" alt="electric-kettle">
+      <p class="price">$10.30</p>
+      <p class="description">Electric Kettle</p>
+    </div>
+  </div>
+</div>
+
+<!-- Extra Services -->
+<div class="extra-services-section">
+  <h3 class="section-title">Our extra services</h3>
+  <div class="services-grid">
+    <div class="service-item">
+      <img src="assets/Extra Services/source-products.png" alt="Source from Industry Hubs" class="service-image">
+      <div class="service-content">
+        <div class="service-icon">
+          <img src="assets/Extra Services/search-icon.png" alt="Icon">
+        </div>
+      </div>
+      <p class="service-title">Source from <br> Industry Hubs</p>
+    </div>
+    <div class="service-item">
+      <img src="assets/Extra Services/customize.png" alt="Customize Your Products" class="service-image">
+      <div class="service-content">
+        <div class="service-icon">
+          <img src="assets/Extra Services/Vector.png" alt="Icon">
+        </div>
+      </div>
+      <p class="service-title">Customize Your <br> Products</p>
+    </div>
+    <div class="service-item">
+      <img src="assets/Extra Services/shipping-air.png" alt="Fast, reliable shipping" class="service-image">
+      <div class="service-content">
+        <div class="service-icon">
+          <img src="assets/Extra Services/forward (1).png" alt="Icon">
+        </div>
+      </div>
+      <p class="service-title">Fast, reliable shipping<br> by ocean or air</p>
+    </div>
+    <div class="service-item">
+      <img src="assets/Extra Services/monitoring-inspection.png" alt="Product monitoring" class="service-image">
+      <div class="service-content">
+        <div class="service-icon">
+          <img src="assets/Extra Services/security.png" alt="Icon">
+        </div>
+      </div>
+      <p class="service-title">Product monitoring <br> and inspection</p>
+    </div>
+  </div>
+</div>
+
 </div>
 
       <!-- permanent bg color -->
@@ -253,6 +548,7 @@
       </div>
     </div>
       </div>
+    </div>
 
       <!-- Subscribe newsletter Section -->
        <div class="subscribe-section">
@@ -264,7 +560,7 @@
           <button>Subscribe</button>
         </div>
        </div>
-</div>
+
     </header>
 
     <!-- <main></main> -->
