--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce Web Design</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="homepage.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="horizontal-line"></div>
-
+    </header>
       <section>
         <!-- all categories mentioned section -->
         <div class="category-section">
