--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,9 @@
       <!-- Navbar -->
       <div class="navbar">
         <div class="logo">
+          <a href="homepage.html">
           <img src="assets/logo-colored.png" alt="" />
+        </a>
         </div>
 
         <div class="input-box">
@@ -52,12 +54,12 @@
         <div class="category-section">
           <ul>
             <img src="assets/menu-icon.png" alt="" />
-            <li>All Category</li>
-            <li>Hot offers</li>
-            <li>Gift boxes</li>
-            <li>Projects</li>
-            <li>Main item</li>
-            <li>Help <img src="assets/dropdown-img.png" alt="" /></li>
+            <li><a href="gridview.html">All Category</a></li>
+            <li><a href="gridview.html">Hot offers</a></li>
+            <li><a href="gridview.html">Gift boxes</a></li>
+            <li><a href="gridview.html">Projects</a></li>
+            <li><a href="gridview.html">Main item</a></li>
+            <li><a href="gridview.html">Help</a><img src="assets/dropdown-img.png" alt="" /></li>
           </ul>
           <div class="btns">
             <button class="currency">
@@ -77,15 +79,15 @@
  <main>
   <div class="main">
     <div class="categories-names">
-      <button>Automobiles</button>
-      <button>Clothes and wear</button>
-      <button>Home interiors</button>
-      <button>Computer and tech</button>
-      <button>Tools, equipment</button>
-      <button>Sports and outdoor</button>
-      <button>Animal and pets</button>
-      <button>Machinery tools</button>
-      <button>More category</button>
+      <button><a href="gridview.html" data-category="Automobiles">Automobiles</a></button>
+    <button><a href="gridview.html" data-category="Clothes and wear">Clothes and wear</a></button>
+    <button><a href="gridview.html" data-category="Home interiors">Home interiors</a></button>
+    <button><a href="gridview.html" data-category="Computer and tech">Computer and tech</a></button>
+    <button><a href="gridview.html" data-category="Tools, equipment">Tools, equipment</a></button>
+    <button><a href="gridview.html" data-category="Sports and outdoor">Sports and outdoor</a></button>
+    <button><a href="gridview.html" data-category="Animal and pets">Animal and pets</a></button>
+    <button><a href="gridview.html" data-category="Machinery tools">Machinery tools</a></button>
+    <button><a href="gridview.html" data-category="More category">More category</a></button>
     </div>
     <div class="banner"><img src="assets/banner.png" alt=""></div>
 
@@ -632,5 +634,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
