--- a/gridview.html
+++ b/gridview.html
@@ -296,7 +296,9 @@
               <span class="current-price">$99.50</span>
               <span class="original-price">$128.00</span>
             </p>
-            <p class="product-rating">⭐⭐⭐⭐⭐ 5</p>
+            <p class="product-rating">
+              <span class="stars">★★★★☆</span> 7.5 • 154 orders
+            </p>
             <p class="product-title">GoPro HERO6 4K Action Camera - Black</p>
           </div>
           <div class="product-card">
@@ -306,7 +308,9 @@
               <span class="current-price">$99.50</span>
               <span class="original-price">$128.00</span>
             </p>
-            <p class="product-rating">⭐⭐⭐⭐⭐ 5</p>
+            <p class="product-rating">
+              <span class="stars">★★★★☆</span> 7.5 • 154 orders
+            </p>
             <p class="product-title">GoPro HERO6 4K Action Camera - Black</p>
           </div>
           <div class="product-card">
@@ -316,7 +320,9 @@
               <span class="current-price">$99.50</span>
               <span class="original-price">$128.00</span>
             </p>
-            <p class="product-rating">⭐⭐⭐⭐⭐ 5</p>
+            <p class="product-rating">
+              <span class="stars">★★★★☆</span> 7.5 • 154 orders
+            </p>
             <p class="product-title">GoPro HERO6 4K Action Camera - Black</p>
           </div>
           <div class="product-card">
@@ -326,7 +332,9 @@
               <span class="current-price">$99.50</span>
               <span class="original-price">$128.00</span>
             </p>
-            <p class="product-rating">⭐⭐⭐⭐⭐ 5</p>
+            <p class="product-rating">
+              <span class="stars">★★★★☆</span> 7.5 • 154 orders
+            </p>
             <p class="product-title">GoPro HERO6 4K Action Camera - Black</p>
           </div>
           <div class="product-card">
@@ -336,7 +344,9 @@
               <span class="current-price">$99.50</span>
               <span class="original-price">$128.00</span>
             </p>
-            <p class="product-rating">⭐⭐⭐⭐⭐ 5</p>
+            <p class="product-rating">
+              <span class="stars">★★★★☆</span> 7.5 • 154 orders
+            </p>
             <p class="product-title">GoPro HERO6 4K Action Camera - Black</p>
           </div>
           <div class="product-card">
@@ -346,7 +356,9 @@
               <span class="current-price">$99.50</span>
               <span class="original-price">$128.00</span>
             </p>
-            <p class="product-rating">⭐⭐⭐⭐⭐ 5</p>
+            <p class="product-rating">
+              <span class="stars">★★★★☆</span> 7.5 • 154 orders
+            </p>
             <p class="product-title">GoPro HERO6 4K Action Camera - Black</p>
           </div>
           
@@ -445,7 +457,7 @@
           <p>&copy 2023 Ecommerce.</p>
           <div><img src="assets/usa-flag.png" alt="">English <img src="assets/dropdown-img.png" alt=""></div>
       </div>
-      /<div>
+      <div>
      </footer>
     </div>
     <script src="script.js"></script>
