--- a/homepage.html
+++ b/homepage.html
@@ -40,7 +40,8 @@
 
         <div class="side-bar">
           <ul>
-            <li><img src="assets/profile-icon.png" alt="" />Profile</li>
+            <li>
+              <img src="assets/profile-icon.png" alt="" />Profile</li>
             <li><img src="assets/messages-icon.png" alt="" />Message</li>
             <li><img src="assets/order-icon.png" alt="" />Orders</li>
             <li><img src="assets/my-cart-icon.png" alt="" />My cart</li>
@@ -375,52 +376,72 @@
   <h3 class="section-title">Recommended items</h3>
   <div class="recommended-grid">
     <div class="item">
+      <a href="product-detail.html">
       <img src="assets/Recommended Items/tshirt.png" alt="T-shirt">
+    </a>
       <p class="price">$10.30</p>
       <p class="description">T-shirts with multiple colors, for men</p>
     </div>
     <div class="item">
+      <a href="product-detail.html">
       <img src="assets/Recommended Items/brown-jacket.png" alt="Jacket">
+    </a>
       <p class="price">$10.30</p>
       <p class="description">Brown Jacket for woman</p>
     </div>
     <div class="item">
+      <a href="product-detail.html">
       <img src="assets/Recommended Items/coat.png" alt="Coat">
+    </a>
       <p class="price">$12.50</p>
       <p class="description">Brown winter coat medium size</p>
     </div>
     <div class="item">
+      <a href="product-detail.html">
       <img src="assets/Recommended Items/wallet.png" alt="Wallet">
+    </a>
       <p class="price">$34.00</p>
       <p class="description">Leather wallet</p>
     </div>
     <div class="item">
+      <a href="product-detail.html">
       <img src="assets/Recommended Items/bag.png" alt="Backpack">
+    </a>
       <p class="price">$99.00</p>
       <p class="description">Jeans bag for travel</p>
     </div>
     <div class="item">
+      <a href="product-detail.html">
       <img src="assets/Recommended Items/short.png" alt="Shorts">
+    </a>
       <p class="price">$9.99</p>
       <p class="description">Shorts</p>
     </div>
     <div class="item">
+      <a href="product-detail.html">
       <img src="assets/headphones.png" alt="Headset">
+    </a>
       <p class="price">$8.99</p>
       <p class="description">Headset for gaming with mic</p>
     </div>
     <div class="item">
+      <a href="product-detail.html">
       <img src="assets/watch.png" alt="Smartwatch">
+    </a>
       <p class="price">$10.30</p>
       <p class="description">Smartwatch silver color modern</p>
     </div>
     <div class="item">
+      <a href="product-detail.html">
       <img src="assets/Recommended Items/bag.png" alt="Bag">
+    </a>
       <p class="price">$10.30</p>
       <p class="description">Jeans bag for travel for men leather material</p>
     </div>
     <div class="item">
+      <a href="product-detail.html">
       <img src="assets/consumer and electronics/electric-kettle.png" alt="electric-kettle">
+    </a>
       <p class="price">$10.30</p>
       <p class="description">Electric Kettle</p>
     </div>
