Cart Page Completed || Ongoing week 4

--- a/listview.html
+++ b/listview.html
@@ -38,7 +38,11 @@
             <li><img src="assets/profile-icon.png" alt="" />Profile</li>
             <li><img src="assets/messages-icon.png" alt="" />Message</li>
             <li><img src="assets/order-icon.png" alt="" />Orders</li>
-            <li><img src="assets/my-cart-icon.png" alt="" />My cart</li>
+            <li style="position: relative; bottom: 3px;">
+              <a href="cartpage.html">
+              <img src="assets/my-cart-icon.png" style="position: relative; top: 2px;" alt="" />
+            </a>
+              My cart</li>
           </ul>
         </div>
       </div>
