Week 4 Completed || Payment method setup

--- a/cartpage.html
+++ b/cartpage.html
@@ -23,7 +23,7 @@
                <li><img src="assets/profile-icon.png" alt="" />Profile</li>
                <li><img src="assets/messages-icon.png" alt="" />Message</li>
                <li><img src="assets/order-icon.png" alt="" />Orders</li>
-               <li style="position: relative; bottom: 3px;">
+               <li style="position: relative; bottom: 3px; gap: 4px;">
                 <a href="cartpage.html">
                 <img src="assets/my-cart-icon.png" style="position: relative; top: 2px;" alt="" />
               </a>
