--- a/homepage.html
+++ b/homepage.html
@@ -97,13 +97,13 @@
     <div class="banner"><img src="assets/banner.png" alt=""></div>
 
     <div class="cards">
-    <div class="login-container">
-      <div class="login-title">Hi user<br>let's get started</div>
-      <div class="login-buttons">
-        <button class="join-button">Join now</button>
-        <button class="login-link">Login</button>
+      <div class="login-container">
+        <div class="login-title">Hi user<br>let's get started</div>
+        <div class="login-buttons">
+          <button class="join-button" onclick="location.href='login.html?action=register'">Join now</button>
+          <button class="login-link" onclick="location.href='login.html?action=login'">Login</button>
+        </div>
       </div>
-    </div>
 
     <div class="card-container">
       <div class="info-card orange-card">
