--- a/gridview.html
+++ b/gridview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="gridview.css">
+    <link rel="stylesheet" href="css/gridview.css">
 </head>
 <body>
     <div class="container">
