--- a/product-detail.html
+++ b/product-detail.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="product-detail.css">
+  <link rel="stylesheet" href="css/product-detail.css">
 </head>
 <div class="container">
 <!-- Navbar -->
