--- a/listview.html
+++ b/listview.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="input-box">
-          <input type="text" placeholder="Search" />
+          <input type="text" id="searchInput" placeholder="Search" />
           <div class="dropdown">
             <button class="dropbtn">
               All Category
@@ -290,7 +290,7 @@
                 <span class="free-shipping">✔ Free Shipping</span>
               </p>
               <p class="product-rating">
-                <span class="stars">★★★★☆</span> 7.5 • 154 orders
+                <span class="stars">★★★★☆</span> 4.5 • 154 orders
               </p>
               <p class="product-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -304,14 +304,14 @@
           <div class="product-card-list" style="padding:20px 0px; margin: 2px 0px;">
             <img src="assets/headphones.png" alt="Product Image" class="product-image-list" />
             <div class="product-info">
-              <h4 class="product-title">Canon Camera EOS 2000, Black 10x zoom</h4>
+              <h4 class="product-title">Wireless headphones</h4>
               <p class="product-price">
                 <span class="current-price">$998.00</span>
                 <span class="original-price">$1128.00</span>
                 <span class="free-shipping">✔ Free Shipping</span>
               </p>
               <p class="product-rating">
-                <span class="stars">★★★★☆</span> 7.5 • 154 orders
+                <span class="stars">★★★★☆</span> 4.5 • 154 orders
               </p>
               <p class="product-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -325,14 +325,14 @@
           <div class="product-card-list">
             <img src="assets/phone.png" alt="Product Image" class="product-image-list" />
             <div class="product-info">
-              <h4 class="product-title">Canon Camera EOS 2000, Black 10x zoom</h4>
+              <h4 class="product-title">Nokia - Phone</h4>
               <p class="product-price">
                 <span class="current-price">$998.00</span>
                 <span class="original-price">$1128.00</span>
                 <span class="free-shipping">✔ Free Shipping</span>
               </p>
               <p class="product-rating">
-                <span class="stars">★★★★☆</span> 7.5 • 154 orders
+                <span class="stars">★★★★☆</span> 4.5 • 154 orders
               </p>
               <p class="product-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -353,7 +353,7 @@
                 <span class="free-shipping">✔ Free Shipping</span>
               </p>
               <p class="product-rating">
-                <span class="stars">★★★★☆</span> 7.5 • 154 orders
+                <span class="stars">★★★★☆</span> 4.5 • 154 orders
               </p>
               <p class="product-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -374,7 +374,7 @@
                 <span class="free-shipping">✔ Free Shipping</span>
               </p>
               <p class="product-rating">
-                <span class="stars">★★★★☆</span> 7.5 • 154 orders
+                <span class="stars">★★★★☆</span> 4.5 • 154 orders
               </p>
               <p class="product-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -395,7 +395,7 @@
                 <span class="free-shipping">✔ Free Shipping</span>
               </p>
               <p class="product-rating">
-                <span class="stars">★★★★☆</span> 7.5 • 154 orders
+                <span class="stars">★★★★☆</span> 4.5 • 154 orders
               </p>
               <p class="product-description">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
