--- a/homepage.html
+++ b/homepage.html
@@ -21,6 +21,7 @@
           <img src="assets/logo-colored.png" alt="" />
         </a>
         </div>
+        
 
         <div class="input-box">
           <input type="text" placeholder="Search" />
@@ -37,6 +38,7 @@
           </div>
           <button class="search">Search</button>
         </div>
+        
 
         <div class="side-bar">
           <ul>
@@ -65,6 +67,8 @@
             <li><a href="gridview.html">Projects</a></li>
             <li><a href="gridview.html">Main item</a></li>
             <li><a href="gridview.html">Help</a><img src="assets/dropdown-img.png" alt="" /></li>
+            <!-- Dark Mode Toggle Button -->
+            <!-- <button id="darkModeToggle">Dark Mode</button> -->
           </ul>
           <div class="btns">
             <button class="currency">
