--- a/product-detail.html
+++ b/product-detail.html
@@ -11,7 +11,7 @@
   <header>
     <div class="navbar">
        <div class="logo">
-         <a href="homepage.html">
+         <a href="index.html">
            <img src="assets/logo-colored.png" alt="" />
          </a>
        </div>
