--- a/cartpage.html
+++ b/cartpage.html
@@ -12,7 +12,7 @@
          <header>
         <div class="navbar">
            <div class="logo">
-             <a href="homepage.html">
+             <a href="index.html">
                <img src="assets/logo-colored.png" alt="" />
              </a>
            </div>
