--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce Web Design</title>
-    <link rel="stylesheet" href="css/homepage.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,7 +17,7 @@
       <!-- Navbar -->
       <div class="navbar">
         <div class="logo">
-          <a href="homepage.html">
+          <a href="index.html">
           <img src="assets/logo-colored.png" alt="" />
         </a>
         </div>
