--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <header>
         <div class="navbar">
            <div class="logo">
-             <a href="homepage.html">
+             <a href="index.html">
                <img src="assets/logo-colored.png" alt="" />
              </a>
            </div>
